fix: prevent tile image distortion with object-fit, add Honorverse cover image

--- a/src/futr/wwwroot/css/site.css
+++ b/src/futr/wwwroot/css/site.css
@@ -267,6 +267,7 @@ div.my-tile {
     div.my-tile img {
         width: 100%;
         height: 100%;
+        object-fit: cover;
     }
 
     div.my-tile .my-title {
